Project

General

Profile

Actions

Bug #24956

closed

osd: parent process need to restart log service after fork, or ceph-osd will not work correctly when the option log_max_new in ceph.conf set to zero

Added by mingshuai wang almost 6 years ago. Updated over 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
OSD
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

ceph-osd parent process need to restart log service after fork, or ceph-osd will not work correctly when the option log_max_new in ceph.conf set to zero

ceph.conf: set log_max_new=0
exec cmd: ceph-disk -v prepare --filestore --zap /dev/nvme0n1
stuck on cmd: /usr/bin/ceph-osd --check-allows-journal --no-mon-config -i 0 --log-file /var/log/ceph/$cluster-osd-check.log --cluster ceph --setuser ceph --setgroup ceph

gdb bt output:

#0 pthread_cond_wait@@GLIBC_2.3.2 () at ../nptl/sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1 0x00007f844a2dd073 in ceph::logging::Log::submit_entry (this=0x7f8456698680, e=e@entry=0x7f8456629e00) at /usr/src/debug/ceph-14.0.0/src/log/Log.cc:234
#2 0x00007f844a2974a0 in AdminSocket::unregister_command (this=this@entry=0x7f8456650820, command=...) at /usr/src/debug/ceph-14.0.0/src/common/admin_socket.cc:469
#3 0x00007f844a4ba264 in CephContext::~CephContext (this=0x7f8456660960, __in_chrg=<optimized out>) at /usr/src/debug/ceph-14.0.0/src/common/ceph_context.cc:629
#4 0x00007f844a4ba894 in CephContext::put (this=0x7f8456660960) at /usr/src/debug/ceph-14.0.0/src/common/ceph_context.cc:690
#5 0x00007f845379c165 in intrusive_ptr_release (cct=<optimized out>) at /usr/src/debug/ceph-14.0.0/src/global/global_init.cc:372
#6 0x00007f845314597d in ~intrusive_ptr (this=0x7ffc8a65c000, __in_chrg=<optimized out>)
at /usr/src/debug/ceph-14.0.0/build/boost/include/boost/smart_ptr/intrusive_ptr.hpp:98
#7 main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/ceph-14.0.0/src/ceph_osd.cc:125

Actions #1

Updated by Patrick Donnelly almost 6 years ago

  • Project changed from Ceph to RADOS
  • Subject changed from ceph-osd parent process need to restart log service after fork, or ceph-osd will not work correctly when the option log_max_new in ceph.conf set to zero to osd: parent process need to restart log service after fork, or ceph-osd will not work correctly when the option log_max_new in ceph.conf set to zero
  • Category deleted (OSD)
  • Component(RADOS) OSD added
Actions #2

Updated by Hsiao-Yin Tseng over 5 years ago

PR:https://github.com/ceph/ceph/pull/23685

Actions #3

Updated by Kefu Chai over 5 years ago

  • Status changed from New to Fix Under Review
Actions #4

Updated by Kefu Chai over 5 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF