osd parent process restart log service after fork

Fix:https://tracker.ceph.com/issues/24956
Signed-off-by: Hsiao-Yin <s02561084s@gmail.com>